# vegasflow

./: .gitignore  .pylintrc  .readthedocs.yml  CITATION.cff  PKGBUILD  README.md  Tensorflow Testing.ipynb  integrand.py  pip_uploader.sh  pyproject.toml  setup.py  vegas_mc_tensorflow.py  vegas_quick_tensorflow.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflow/: pythonpackage.yml
.github/workflows/: pytest.yml  pythonpackage.yml  pythonpublish.yml
benchmark/: asian_options_tf.py  drellyan_lo_tf.py  genz_tf.py  lepage_tf.py  run_example.sh  singletop_lo_tf.py  vegas_mpi.py
doc/: requirements.txt
doc/source/: conf.py  examples.rst  how_to.rst  index.rst  intalg.rst
doc/source/apisrc/: modules.rst  vegasflow.rst
examples/: asian_options_tf.py  basic_example.py  cluster_dask.py  drellyan_lo_tf.py  example_eager.py  example_pineappl.py  example_stratified.py  histogram_ex.py  lepage.py  lepage_cffi.py  lepage_tf.py  multidimensional_integral.py  multiple_integrals.py  quantum_mc.py  retracing.py  simgauss_cffi.py  simgauss_eager.py  simgauss_tf.py  sin_tf.py  singletop_lo_tf.py  test_graph.py
examples/cuda/: cuda_example.py  integrand.cpp  integrand.cu.cpp  integrand.h  makefile
notebooks/: SaveLoadModel.ipynb  TensorFlowLite.ipynb
notebooks/android/: settings.gradle
notebooks/android/app/: build.gradle
notebooks/android/app/src/androidTest/java/com/example/vegasflow/: ExampleInstrumentedTest.java
notebooks/android/app/src/main/: AndroidManifest.xml
notebooks/android/app/src/main/assets/: model.tflite
notebooks/android/app/src/main/java/com/example/vegasflow/: MainActivity.java
notebooks/android/app/src/main/res/layout/: activity_main.xml
notebooks/android/app/src/main/res/values/: strings.xml
notebooks/android/app/src/test/java/com/example/vegasflow/: ExampleUnitTest.java
notebooks/android/gradle/wrapper/: gradle-wrapper.properties
src/vegasflow/: __init__.py  configflow.py  monte_carlo.py  plain.py  quantum.py  rtbm.py  stratified.py  utils.py  vegas.py  vflow.py  vflowplus.py
src/vegasflow/tests/: test_algs.py  test_config.py  test_gradients.py  test_misc.py  test_run.py  test_utils.py
vegasflow/: __init__.py  monte_carlo.py
