[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "vegasflow"
author = "Stefano Carrazza and Juan Cruz-Martinez"
author-email = "stefano.carrazza@cern.ch"
home-page = "https://github.com/N3PDF/vegasflow"
description-file="README.md"
requires-python=">=3.6"
requires = [
     'numpy',
     'tensorflow',
     'cffi > 1.0.0',
     'vegas', # Lepage's Vegas for benchmarking
]
classifiers = [
     'Operating System :: Unix',
     'Programming Language :: Python',
     'Programming Language :: Python :: 3',
     'Topic :: Scientific/Engineering',
     'Topic :: Scientific/Engineering :: Physics',
]

[tool.flit.metadata.requires-extra]
test = [
     'hypothesis',
     'pytest',
     'pytest-cov'
]
doc = [
    'sphinx',
    'ruamel.yaml',
]
