[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vegasflow"
version = "1.4.0"
description="Hardware agnostic Monte Carlo integration"
authors = [
	{name = "S. Carrazza", email = "stefano.carraza@cern.ch"},
	{name = "J.Cruz-Martinez", email = "juacrumar@lairen.eu"}
]
classifiers=[
	'Operating System :: Unix',
	'Programming Language :: Python',
	'Programming Language :: Python :: 3',
	'Topic :: Scientific/Engineering',
	'Topic :: Scientific/Engineering :: Physics',
]
dependencies = [
	"joblib",
	"numpy",
	"tensorflow>2.2"
]

[project.optional-dependencies] 
docs = [
'sphinx_rtd_theme',
'recommonmark',
'sphinxcontrib-bibtex',
]
examples = [
'cffi',
'pineappl',
'pdfflow',
'scipy'
]
benchmark = [
'vegas', # Lepage's Vegas for benchmarking
]
distribute = [
'dask',
'distributed',
'dask-jobqueue',
]
